--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello World</h1>
     <p>I am trying to complete my web development course</p>
+    <p>lets finish the project</p>
 </body>
 </html>
